tests/chapter_11/invalid_types/call_long_as_function.c
LONG64 x(void);

int main(void) {
    LONG64 x = 0;
    /* x isn't a function, so you can't call it */
    return x();
}